logs/backend.log
  File "/Users/xian/Development/piper-morgan/main.py", line 133
    print("
           ^
SyntaxError: EOL while scanning string literal
